ログイン画面の実装

--- a/native/android/app/src/main/res/values/strings.xml
+++ b/native/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
   <string name="app_name">PrestoPay</string>
+  <string name="login_title">Presto Pay</string>
+  <string name="google_signin" />
+  <string name="login_button">ログイン</string>
+  <string name="login_new_button">新規登録する</string>
+  <string name="login_forget_password">パスワードを忘れた</string>
+  <string name="google_signin_text">Googleでサインイン</string>
+  <string name="twitter_signin_text">Twitterでサインイン</string>
+  <string name="github_signin_text">Githubでサインイン</string>
 </resources>
