画面の修正

--- a/native/android/app/src/main/res/values/strings.xml
+++ b/native/android/app/src/main/res/values/strings.xml
@@ -28,8 +28,8 @@
   <string name="blue_circle">青色の円</string>
   <string name="white_circle">白の円</string>
   <string name="plus_icon">プラスのアイコン</string>
-  <string name="login_new_text"><u>新規登録する</u></string>
-  <string name="login_forget_text"><u>パスワードを忘れた</u></string>
+  <string name="login_new_text">アカウントをお持ちでない方</string>
+  <string name="login_forget_text">パスワードを忘れた方</string>
   <string name="facebook_signin_text">Facebookでサインイン</string>
   <string name="lending_status">貸し借り状況</string>
   <string name="person_icon">人のアイコン</string>
