[BL]firebaseを用いた twitter sign inの実装

--- a/native/android/app/src/main/res/values/strings.xml
+++ b/native/android/app/src/main/res/values/strings.xml
@@ -20,9 +20,9 @@
   <string name="login_title">Presto Pay</string>
   <string name="google_signin" />
   <string name="login_button">ログイン</string>
-  <string name="google_signin_text">Googleでサインイン</string>
+  <string name="google_signin_text">Log in with Google</string>
   <string name="twitter_signin_text">Twitterでサインイン</string>
-  <string name="github_signin_text">Githubでサインイン</string>
+  <string name="github_signin_text">Log in with Github</string>
   <string name="gourp_friend">グループ・友達</string>
   <string name="account">アカウント</string>
   <string name="blue_circle">青色の円</string>
@@ -30,7 +30,7 @@
   <string name="plus_icon">プラスのアイコン</string>
   <string name="login_new_text">アカウントをお持ちでない方</string>
   <string name="login_forget_text">パスワードを忘れた方</string>
-  <string name="facebook_signin_text">Facebookでサインイン</string>
+  <string name="facebook_signin_text">Log in with Facebook</string>
   <string name="lending_status">貸し借り状況</string>
   <string name="person_icon">人のアイコン</string>
   <string name="icon">アイコン</string>
