--- a/native/android/app/src/main/res/values/strings.xml
+++ b/native/android/app/src/main/res/values/strings.xml
@@ -69,10 +69,32 @@
   </string-array>
   <integer-array name="tag_array">
     <item>@drawable/ic_baseline_shopping_cart_24</item>
+    <item>@drawable/ic_baseline_restaurant_24</item>
     <item>@drawable/ic_baseline_train_24</item>
+    <item>@drawable/ic_baseline_hotel_24</item>
+    <item>@drawable/ic_baseline_local_movies_24</item>
+    <item>@drawable/ic_baseline_music_note_24</item>
+    <item>@drawable/ic_baseline_local_drink_24</item>
+    <item>@drawable/ic_baseline_local_gas_station_24</item>
+    <item>@drawable/ic_baseline_sports_soccer_24</item>
+    <item>@drawable/ic_baseline_cake_24</item>
+    <item>@drawable/ic_baseline_menu_book_24</item>
+    <item>@drawable/ic_baseline_home_24</item>
+    <item>@drawable/ic_baseline_attach_money_24</item>
   </integer-array>
   <string-array name="tag_name">
-    <item>買い物</item>
+    <item>食材</item>
+    <item>レストラン</item>
     <item>交通費</item>
+    <item>ホテル</item>
+    <item>映画</item>
+    <item>アミューズメント</item>
+    <item>お酒</item>
+    <item>ガソリン</item>
+    <item>スポーツ</item>
+    <item>プレゼント</item>
+    <item>雑貨</item>
+    <item>家賃</item>
+    <item>その他</item>
   </string-array>
 </resources>
