--- a/native/android/app/src/main/res/values/strings.xml
+++ b/native/android/app/src/main/res/values/strings.xml
@@ -135,7 +135,8 @@
     <string name="settle_up">精算</string>
     <string name="groupName">グループ名</string>
   <string name="groupDisplayToggle">非表示</string>
-  <string-array name="currency_array">
+    <string name="paymentCompleted">精算完了</string>
+    <string-array name="currency_array">
     <item>￥</item>
     <item>＄</item>
     <item>€</item>
