--- a/native/android/app/src/main/res/values/strings.xml
+++ b/native/android/app/src/main/res/values/strings.xml
@@ -142,8 +142,73 @@
   <string-array name="currency_array">
     <item>jpy</item>
     <item>usd</item>
+    <item>eur</item>
     <item>sek</item>
+    <item>bgn</item>
+    <item>czk</item>
+    <item>dkk</item>
+    <item>gbp</item>
+    <item>huf</item>
+    <item>pln</item>
+    <item>ron</item>
+    <item>chf</item>
+    <item>isk</item>
+    <item>nok</item>
+    <item>hrk</item>
+    <item>rub</item>
+    <item>try</item>
+    <item>aud</item>
+    <item>brl</item>
+    <item>cad</item>
+    <item>cny</item>
+    <item>hkd</item>
+    <item>idr</item>
+    <item>ils</item>
+    <item>inr</item>
+    <item>krw</item>
+    <item>mxn</item>
+    <item>myr</item>
+    <item>nzd</item>
+    <item>php</item>
+    <item>sgd</item>
+    <item>thb</item>
+    <item>zar</item>
   </string-array>
+  <integer-array name="national_flags_array">
+    <item>@drawable/japan_flag_round_icon_256</item>
+    <item>@drawable/united_states_of_america_flag_round_icon_256</item>
+    <item>@drawable/europe_flag_round_icon_256</item>
+    <item>@drawable/sweden_flag_round_icon_256</item>
+    <item>@drawable/bulgaria_flag_round_icon_256</item>
+    <item>@drawable/czech_republic_flag_round_icon_256</item>
+    <item>@drawable/denmark_flag_round_icon_256</item>
+    <item>@drawable/united_kingdom_flag_round_icon_256</item>
+    <item>@drawable/hungary_flag_round_icon_256</item>
+    <item>@drawable/poland_flag_round_icon_256</item>
+    <item>@drawable/romania_flag_round_icon_256</item>
+    <item>@drawable/switzerland_flag_round_icon_256</item>
+    <item>@drawable/iceland_flag_round_icon_256</item>
+    <item>@drawable/norway_flag_round_icon_256</item>
+    <item>@drawable/croatia_flag_round_icon_256</item>
+    <item>@drawable/russia_flag_round_icon_256</item>
+    <item>@drawable/turkey_flag_round_icon_256</item>
+    <item>@drawable/australia_flag_round_icon_256</item>
+    <item>@drawable/brazil_flag_round_icon_256</item>
+    <item>@drawable/canada_flag_round_icon_256</item>
+    <item>@drawable/china_flag_round_icon_256</item>
+    <item>@drawable/hongkong_flag_round_icon_256</item>
+    <item>@drawable/indonesia_flag_round_icon_256</item>
+    <item>@drawable/israel_flag_round_icon_256</item>
+    <item>@drawable/india_flag_round_icon_256</item>
+    <item>@drawable/south_korea_flag_round_icon_256</item>
+    <item>@drawable/mexico_flag_round_icon_256</item>
+    <item>@drawable/malaysia_flag_round_icon_256</item>
+    <item>@drawable/new_zealand_flag_round_icon_256</item>
+    <item>@drawable/philippines_flag_round_icon_256</item>
+    <item>@drawable/singapore_flag_round_icon_256</item>
+    <item>@drawable/thailand_flag_round_icon_256</item>
+    <item>@drawable/south_africa_flag_round_icon_256</item>
+  </integer-array>
   <integer-array name="tag_array">
     <item>@drawable/ic_baseline_shopping_cart_24</item>
     <item>@drawable/ic_baseline_restaurant_24</item>
@@ -157,7 +222,6 @@
     <item>@drawable/ic_baseline_cake_24</item>
     <item>@drawable/ic_baseline_menu_book_24</item>
     <item>@drawable/ic_baseline_home_24</item>
-    <item>@drawable/ic_baseline_attach_money_24</item>
   </integer-array>
   <string-array name="tag_name">
     <item>食材</item>
@@ -172,6 +236,5 @@
     <item>プレゼント</item>
     <item>雑貨</item>
     <item>家賃</item>
-    <item>その他</item>
   </string-array>
 </resources>
