--- a/native/android/app/src/main/res/values/strings.xml
+++ b/native/android/app/src/main/res/values/strings.xml
@@ -174,6 +174,41 @@
     <item>thb</item>
     <item>zar</item>
   </string-array>
+  <string-array name="country_names">
+    <item>Japanese Yen</item>
+    <item>US Dollar</item>
+    <item>Euro</item>
+    <item>Swedish Krone</item>
+    <item>Bulgarian Lev</item>
+    <item>Czech Koruna</item>
+    <item>Danish Krone</item>
+    <item>Pound Sterling</item>
+    <item>Forint</item>
+    <item>Zloty</item>
+    <item>Romanian Leu</item>
+    <item>Swiss Franc</item>
+    <item>Iceland Krona</item>
+    <item>Norwegian Krone</item>
+    <item>Kuna</item>
+    <item>Russian Ruble</item>
+    <item>Turkish Lira</item>
+    <item>Australian Dollar</item>
+    <item>Brazilian Real</item>
+    <item>Canadian Dollar</item>
+    <item>Yuan Renminbi</item>
+    <item>Hong Kong Dollar</item>
+    <item>Rupiah</item>
+    <item>New Israeli Sheqel</item>
+    <item>Indian Rupee</item>
+    <item>Won</item>
+    <item>Mexican Peso</item>
+    <item>Malaysian Ringgit</item>
+    <item>New Zealand Dollar</item>
+    <item>Philippine Peso</item>
+    <item>Singapore Dollar</item>
+    <item>Baht</item>
+    <item>Rand</item>
+  </string-array>
   <integer-array name="national_flags_array">
     <item>@drawable/japan_flag_round_icon_256</item>
     <item>@drawable/united_states_of_america_flag_round_icon_256</item>
@@ -216,25 +251,25 @@
     <item>@drawable/ic_baseline_hotel_24</item>
     <item>@drawable/ic_baseline_local_movies_24</item>
     <item>@drawable/ic_baseline_music_note_24</item>
-    <item>@drawable/ic_baseline_local_drink_24</item>
     <item>@drawable/ic_baseline_local_gas_station_24</item>
     <item>@drawable/ic_baseline_sports_soccer_24</item>
     <item>@drawable/ic_baseline_cake_24</item>
     <item>@drawable/ic_baseline_menu_book_24</item>
     <item>@drawable/ic_baseline_home_24</item>
+    <item>@drawable/ic_baseline_menu_24</item>
   </integer-array>
   <string-array name="tag_name">
-    <item>食材</item>
+    <item>買い物</item>
     <item>レストラン</item>
     <item>交通費</item>
     <item>ホテル</item>
     <item>映画</item>
     <item>アミューズメント</item>
-    <item>お酒</item>
     <item>ガソリン</item>
     <item>スポーツ</item>
     <item>プレゼント</item>
     <item>雑貨</item>
     <item>家賃</item>
+    <item>その他</item>
   </string-array>
 </resources>
