非表示グループ削除の実装

--- a/native/android/app/src/main/res/values-ja/strings.xml
+++ b/native/android/app/src/main/res/values-ja/strings.xml
@@ -139,6 +139,8 @@
   <string name="friendView">友達</string>
   <string name="messagePaymentCompleted">この支払いの精算を完了する</string>
   <string name="messagePaymentUncomplete">この支払いの精算を未完了する</string>
+  <string name="hiddenGroups">グループ非表示一覧</string>
+  <string name="delete_hidden_group">非表示グループリストから削除する</string>
   <string-array name="currency_array">
     <item>jpy</item>
     <item>usd</item>
