--- a/native/android/app/src/main/res/values-ja/strings.xml
+++ b/native/android/app/src/main/res/values-ja/strings.xml
@@ -161,6 +161,7 @@
   <string name="hiddenGroups">グループ非表示一覧</string>
   <string name="delete_hidden_group">非表示グループリストから削除する</string>
   <string name="bad_internet_connection">通信状況を確認してください</string>
+  <string name="skip">SKIP</string>
   <string-array name="currency_array">
     <item>jpy</item>
     <item>usd</item>
@@ -208,7 +209,7 @@
     <item>プレゼント</item>
     <item>雑貨</item>
     <item>家賃</item>
-    <item>その他</item>
+    <item>精算</item>
   </string-array>
   <string-array name="dividingMethod">
     <item>割り勘</item>
