--- a/native/android/app/src/main/res/values/strings.xml
+++ b/native/android/app/src/main/res/values/strings.xml
@@ -167,6 +167,8 @@
   <string name="delete_hidden_group">非表示グループリストから削除する</string>
   <string name="bad_internet_connection">通信状況を確認してください</string>
   <string name="skip">SKIP</string>
+  <string name="personal_edit">個人情報を編集</string>
+  <string name="mail">メール</string>
   <string-array name="currency_array">
     <item>jpy</item>
     <item>usd</item>
