--- a/native/android/app/src/main/res/values/strings.xml
+++ b/native/android/app/src/main/res/values/strings.xml
@@ -169,6 +169,9 @@
   <string name="skip">SKIP</string>
   <string name="personal_edit">個人情報を編集</string>
   <string name="mail">メール</string>
+  <string name="group_edit">グループ情報を編集</string>
+  <string name="select_member">メンバーを選択</string>
+  <string name="search_user">ユーザー名を検索</string>
   <string-array name="currency_array">
     <item>jpy</item>
     <item>usd</item>
