--- a/native/android/app/src/main/res/values-ja/strings.xml
+++ b/native/android/app/src/main/res/values-ja/strings.xml
@@ -106,7 +106,7 @@
   <string name="cancel">キャンセル</string>
   <string name="fill_friend_username">友達のユーザー名を入力してください</string>
   <string name="user_not_found">ユーザーが見つかりません</string>
-  <string name="add_friend_question">友だち追加しますか？</string>
+  <string name="add_friend_question">この友だち追加しますか？</string>
   <string name="group_member_restriction">グループメンバーは100人までです</string>
   <string name="group_name_restriction">1〜31文字のグループ名を入力してください</string>
   <string name="delete_friend">友達リストから削除する</string>
