--- a/native/android/app/src/main/res/values/strings.xml
+++ b/native/android/app/src/main/res/values/strings.xml
@@ -172,6 +172,8 @@
   <string name="group_edit">グループ情報を編集</string>
   <string name="select_member">メンバーを選択</string>
   <string name="search_user">ユーザー名を検索</string>
+  <string name="グループ写真を変更" />
+  <string name="change_group_profile">グループ写真を変更</string>
   <string-array name="currency_array">
     <item>jpy</item>
     <item>usd</item>
