--- a/native/android/app/src/main/res/values/strings.xml
+++ b/native/android/app/src/main/res/values/strings.xml
@@ -174,6 +174,8 @@
   <string name="search_user">ユーザー名を検索</string>
   <string name="グループ写真を変更" />
   <string name="change_group_profile">グループ写真を変更</string>
+  <string name="精算する">to_settleup</string>
+  <string name="settleup_group">精算する</string>
   <string-array name="currency_array">
     <item>jpy</item>
     <item>usd</item>
