--- a/native/android/app/src/main/res/values/strings.xml
+++ b/native/android/app/src/main/res/values/strings.xml
@@ -176,6 +176,7 @@
   <string name="change_group_profile">グループ写真を変更</string>
   <string name="精算する">to_settleup</string>
   <string name="settleup_group">精算する</string>
+  <string name="amount_too_high">金額は100万未満まで有効です</string>
   <string-array name="currency_array">
     <item>jpy</item>
     <item>usd</item>
